--- a/DynamicForm/Views/Fields/_EditFields.cshtml
+++ b/DynamicForm/Views/Fields/_EditFields.cshtml
@@ -8,7 +8,7 @@
 @*<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>*@
 
 
-<form id="edit_form" name="editfield" asp-controller="Fields" asp-action="SaveField" method="post" novalidate
+<form id="edit_form" name="editfield" asp-controller="Fields" asp-action="SaveEditField" method="post" novalidate
       data-ajax="true" data-ajax-method="post" data-ajax-complete="updatedField" enctype="multipart/form-data" autocomplete="off">
     <div class="modal-dialog" id="add-field-model">
         <div class="modal-content">
