--- a/DynamicForm/Views/Forms/_EditForm.cshtml
+++ b/DynamicForm/Views/Forms/_EditForm.cshtml
@@ -5,7 +5,7 @@
 }
 <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
 <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
-<form name="editform" asp-controller="Forms" asp-action="SaveForm" method="post"
+<form name="editform" asp-controller="Forms" asp-action="SaveEditForm" method="post"
       data-ajax="true" data-ajax-method="post" data-ajax-complete="updatedForm" enctype="multipart/form-data" autocomplete="off">
 
     <!-- Modal -->
