--- a/DynamicForm/Views/Fields/Index.cshtml
+++ b/DynamicForm/Views/Fields/Index.cshtml
@@ -80,6 +80,10 @@
                                 <label class="required" for="DefaultValue">Default Value</label>
                                 <input type="text" id="DefaultValue" class="form-control" name="DefaultValue" asp-for="DefaultValue" />
                             </div>
+                            <div class="form-group">
+                                <label class="required" for="OrderNo">Oder No</label>
+                                <input type="number" id="OrderNo" class="form-control" name="OrderNo" asp-for="OrderNo" min="1" />
+                            </div>
                             <div class="form-check">
                                 <input type="checkbox" class="form-check-input" asp-for="IsRequired" />
                                 <label class="form-check-label" for="IsRequired"> Required</label>
@@ -144,6 +148,9 @@
                     },
                     'DefaultValue': {
                         required: true
+                    },
+                    'OrderNo': {
+                        required: true
                     }
                 },
                 messages: {
@@ -152,6 +159,9 @@
                     },
                     'DefaultValue': {
                         required: 'DefaultValue is required'
+                    },
+                    'OrderNo': {
+                        required: 'OrderNo is required'
                     }
                 },
                 highlight: function (element) {
@@ -216,6 +226,16 @@
                     $('#update-field-model').hide();
                     oTable = $('#tbField').DataTable();
                     oTable.draw();
+                });
+                $('#btnUpdateFieldClose').click();
+                clearFieldUpdate();
+            } else if (rtn.error && rtn.duplicateFiled) {
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Template Field',
+                    text: rtn.message,
+                    type: 'error',
+                    allowOutsideClick: false
                 });
                 $('#btnUpdateFieldClose').click();
                 clearFieldUpdate();
