--- a/DynamicForm/Views/Fields/_EditFields.cshtml
+++ b/DynamicForm/Views/Fields/_EditFields.cshtml
@@ -29,6 +29,10 @@
                     <label class="required" for="DefaultValue">Default Value</label>
                     <input type="text" id="DefaultValue" class="form-control" name="DefaultValue" asp-for="DefaultValue" />
                 </div>
+                <div class="form-group">
+                    <label class="required" for="OrderNo">Order No</label>
+                    <input type="number" id="OrderNo" class="form-control" name="OrderNo" asp-for="OrderNo" min="1" readonly />
+                </div>
                 <div class="form-check">
                     <input type="checkbox" class="form-check-input" asp-for="IsRequired" />
                     <label class="form-check-label" for="IsRequired"> Required</label>
