--- a/DynamicForm/Views/LogIn/Register.cshtml
+++ b/DynamicForm/Views/LogIn/Register.cshtml
@@ -30,18 +30,18 @@
                 </div>
                 <div class="modal-body">
                     <div class="form-group">
-                        <label class="required" for="Email">Email</label>
-                        <input type="text" id="email" class="form-control" asp-for="Email" />                        
+                        <label for="Email">Email</label>
+                        <input type="text" id="email" class="form-control" asp-for="Email" required />                        
                         <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label class="required" for="UserName">User Name</label>
-                        <input type="text" id="username" class="form-control" asp-for="UserName" />
+                        <label for="UserName">User Name</label>
+                        <input type="text" id="username" class="form-control" asp-for="UserName" required />
                         <span asp-validation-for="UserName" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label class="required" for="Password">Password</label>
-                        <input type="password" id="password" class="form-control" asp-for="Password" />                        
+                        <label for="Password">Password</label>
+                        <input type="password" id="password" class="form-control" asp-for="Password" required />                        
                         <span asp-validation-for="Password" class="text-danger"></span>
                     </div>                
                 </div>
