Close icon alignment and layout page changes

--- a/DynamicForm/Views/Fields/Index.cshtml
+++ b/DynamicForm/Views/Fields/Index.cshtml
@@ -62,9 +62,9 @@
                 <div class="modal-dialog">
                     <!-- Modal content-->
                     <div class="modal-content">
-                        <div class="modal-header bg-warning">
+                        <div class="modal-header bg-warning">                            
+                            <button type="button" class="close" data-dismiss="modal" id="modelclose">x</button>
                             <h4 class="modal-title">Add Form Control</h4>
-                            <button type="button" class="close" data-dismiss="modal" id="modelclose">&times;</button>
                         </div>
                         <div class="modal-body">
 
