--- a/DynamicForm/Views/LogIn/Register.cshtml
+++ b/DynamicForm/Views/LogIn/Register.cshtml
@@ -26,7 +26,7 @@
             <div class="modal-content">
                 <div class="modal-header bg-warning">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                    <h3>User Register</h3>
+                            <h4 class="modal-title">User Register</h4>
                 </div>
                 <div class="modal-body">
                     <div class="form-group">
