--- a/DynamicForm/Views/Fields/_EditFields.cshtml
+++ b/DynamicForm/Views/Fields/_EditFields.cshtml
@@ -14,7 +14,7 @@
         <div class="modal-content">
             <div class="modal-header bg-warning">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h3>Edit Form Control</h3>
+                <h4 class="modal-title">Edit Form Control</h4>
             </div>
             <div class="modal-body">
                 <div class="form-group">
