--- a/DynamicForm/Views/Forms/Index.cshtml
+++ b/DynamicForm/Views/Forms/Index.cshtml
@@ -48,8 +48,8 @@
                     <!-- Modal content-->
                     <div class="modal-content">
                         <div class="modal-header bg-warning">
+                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                             <h4 class="modal-title">Add/Edit Template Form</h4>
-                            <button type="button" class="close" data-dismiss="modal" id="modelclose">&times;</button>
                         </div>
                         <div class="modal-body">
                             <div class="form-group">
