--- a/DynamicForm/Views/Forms/_EditForm.cshtml
+++ b/DynamicForm/Views/Forms/_EditForm.cshtml
@@ -15,7 +15,7 @@
             <div class="modal-content">
                 <div class="modal-header bg-warning">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                    <h3>Edit Form </h3>
+                    <h4 class="modal-title">Edit Form</h4>
                 </div>
                 <div class="modal-body">
                     <div class="form-group">
