--- a/DynamicForm/Views/Shared/_Layout.cshtml
+++ b/DynamicForm/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/DynamicForm.styles.css" asp-append-version="true" />
+    
 </head>
 <body>
     <header>
@@ -23,7 +24,7 @@
                 </ul>               
                 <ul class="nav navbar-nav navbar-right">
                     @*<li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>*@
-                    <li><a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="LogOff"><span class="glyphicon glyphicon-log-in"></span> Logoff</a></li>
+                    <li><a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="LogOff"><span class="oi oi-account-logout" aria-hidden="true"></span> Log Out</a></li>
                 </ul>
             </div>
         </nav>
