--- a/DynamicForm/Views/Fields/Index.cshtml
+++ b/DynamicForm/Views/Fields/Index.cshtml
@@ -81,7 +81,7 @@
                                 <input type="text" id="DefaultValue" class="form-control" name="DefaultValue" asp-for="DefaultValue" />
                             </div>
                             <div class="form-group">
-                                <label class="required" for="OrderNo">Oder No</label>
+                                <label class="required" for="OrderNo">Ordinal</label>
                                 <input type="number" id="OrderNo" class="form-control" name="OrderNo" asp-for="OrderNo" min="1" />
                             </div>
                             <div class="form-check">
