--- a/DynamicForm/Views/Home/Index.cshtml
+++ b/DynamicForm/Views/Home/Index.cshtml
@@ -1,12 +1,12 @@
 ﻿@using DynamicForm.Filters;
 @{
     ViewBag.Title = "Home";
-    var dataString = CustomQueryStringHelper.EncryptString("", "Index", "DynamicForm", new { id = 84 });
+    var dataString = CustomQueryStringHelper.EncryptString("", "Index", "DynamicForm", new { id = 98 });
 
 }
 
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-     <a href='@dataString'>Clcik</a>
+     <a href='@dataString'>Click</a>
 </div>
