--- a/DynamicForm/Views/Fields/_EditFields.cshtml
+++ b/DynamicForm/Views/Fields/_EditFields.cshtml
@@ -30,8 +30,8 @@
                     <input type="text" id="DefaultValue" class="form-control" name="DefaultValue" asp-for="DefaultValue" />
                 </div>
                 <div class="form-group">
-                    <label class="required" for="OrderNo">Order No</label>
-                    <input type="number" id="OrderNo" class="form-control" name="OrderNo" asp-for="OrderNo" min="1" readonly />
+                    <label class="required" for="OrderNo">Ordinal</label>
+                    <input type="number" id="OrderNo" class="form-control" name="OrderNo" asp-for="OrderNo" />
                 </div>
                 <div class="form-check">
                     <input type="checkbox" class="form-check-input" asp-for="IsRequired" />
