--- a/DynamicForm/Views/DynamicForm/Index.cshtml
+++ b/DynamicForm/Views/DynamicForm/Index.cshtml
@@ -33,15 +33,14 @@
                 {
                     <div class="row">
                         <div class="col-md-12 col-sm-12 col-xs-12">
-
                             <div class="x_content">
                                 @if (item.ControlId == (int)Shared.Enum.ControlType.TextBox)
                                 {
                                     <div class="col-span-12 sm:col-span-6">
                                         <label for="@item.Name" class="form-label">@item.Name</label>
                                         @if (item.IsRequired)
-                                        {                                           
-                                           <input name="@item.Name" id="@item.Name" type="text" class="form-control" style="width:40%" required>                                              
+                                        {
+                                            <input name="@item.Name" id="@item.Name" type="text" class="form-control" style="width:40%" required>
                                         }
                                         else
                                         {
@@ -94,112 +93,178 @@
                                 {
                                     @if (item.IsRequired)
                                     {
+                                        <div class="custom-control custom-checkbox d-flex flex-row align-items-center">
+                                            <label for="@item.Name" class="form-label col-span-6 sm:col-span-6">@item.Name</label>
+                                            <input name="@item.Name" type="checkbox" id="@item.Name" required />
+                                        </div>
+                                        <br />
+                                    }
+                                    else
+                                    {
                                         <div class="custom-control custom-checkbox col-span-6 sm:col-span-6">
                                             <label for="@item.Name" class="form-label">@item.Name</label>
                                             <input name="@item.Name" type="checkbox" id="@item.Name" required />
                                         </div>
                                     }
-                                    else
-                                    {
-                                        <div class="custom-control custom-checkbox col-span-6 sm:col-span-6">
-                                            <label for="textareainput" class="form-label">@item.Name</label>
-                                            <input name="@item.Name" type="checkbox" id="@item.Name" />
-                                        </div>
-                                    }
-                                }
+                                }                                
                                 else if (item.ControlId == (int)Shared.Enum.ControlType.CheckBoxList)
+                                {
+                                @if (item.IsRequired)
                                 {
                                     <div class="col-span-12 sm:col-span-6">
                                         <label for="selection" class="form-label">@item.Name</label>
                                         <br />
                                         @foreach (SelectListItem option in ViewBag.CheckBoxListOptions)
                                         {
-                                            <input type="checkbox" name="@item.Name" value="@option.Text" />
-                                            @option.Text
-                                            <br />
+                                            @if (option.Selected)
+                                            {
+                                                <input type="checkbox" name="@item.Name" value="@option.Text" required />
+                                                @option.Text
+                                                <br />
+                                            }
+                                            else
+                                            {
+                                                <input type="checkbox" name="@item.Name" value="@option.Text" required />
+                                                @option.Text
+                                            }
+                                        }
+                                    </div>
+
+                                }
+                                else
+                                {
+                                    <div class="col-span-12 sm:col-span-6">
+                                        <label for="selection" class="form-label">@item.Name</label>
+                                        <br />
+                                        @foreach (SelectListItem option in ViewBag.CheckBoxListOptions)
+                                        {
+                                            @if (option.Selected)
+                                            {
+                                                <input type="checkbox" name="@item.Name" value="@option.Text" />
+                                                @option.Text
+                                                <br />
+                                            }
+                                            else
+                                            {
+                                                <input type="checkbox" name="@item.Name" value="@option.Text" />
+                                                @option.Text
+                                            }
                                         }
                                     </div>
                                 }
+                                }
                                 else if (item.ControlId == (int)Shared.Enum.ControlType.RadioButtonList)
+                                {
+                                @if (item.IsRequired)
                                 {
                                     <div class="col-span-12 sm:col-span-6">
                                         <label for="selection" class="form-label">@item.Name</label>
                                         <br />
                                         @foreach (SelectListItem option in ViewBag.RadioButtonsOptions)
                                         {
-                                            <input type="radio" value="@option.Text" name="@item.Name" />
-                                            @option.Text
-                                            <br />
+                                            @if (option.Selected)
+                                            {
+                                                <input type="radio" name="@option.Text" value="@option.Text" required />
+                                                @option.Text
+                                                <br />
+                                            }
+                                            else
+                                            {
+                                                <input type="checkbox" name="@option.Text" value="@option.Text" required />
+                                                @option.Text
+                                            }
                                         }
                                     </div>
                                 }
+                                else
+                                {
+                                    <div class="col-span-12 sm:col-span-6">
+                                        <label for="selection" class="form-label">@item.Name</label>
+                                        <br />
+                                        @foreach (SelectListItem option in ViewBag.RadioButtonsOptions)
+                                        {
+                                            @if (option.Selected)
+                                            {
+                                                <input type="radio" name="@option.Text" value="@option.Text" />
+                                                @option.Text
+                                                <br />
+                                            }
+                                            else
+                                            {
+                                                <input type="checkbox" name="@option.Text" value="@option.Text" />
+                                                @option.Text
+                                            }
+                                        }
+                                    </div>
+                                }
+                                }
                                 else if (item.ControlId == (int)Shared.Enum.ControlType.FileUpload)
                                 {
-                                    @if (item.IsRequired)
-                                    {
-                                        <div class="custom-file-input">
-                                            <label for="@item.Name" class="form-label">Select File</label>
-                                            <input name="@item.Name" type="file" class="custom-file-input" id="@item.Name" style="width:40%" required>
-                                        </div>
-                                    }
-                                    else
-                                    {
-                                        <div class="custom-file-input">
-                                            <label for="@item.Name" class="form-label">Select File</label>
-                                            <input name="@item.Name" type="file" class="custom-file-input" id="@item.Name" style="width:40%">
-                                        </div>
-                                    }
+                                @if (item.IsRequired)
+                                {
+                                    <div class="custom-file-input">
+                                        <label for="@item.Name" class="form-label">Select File</label>
+                                        <input name="@item.Name" type="file" class="custom-file-input" id="@item.Name" style="width:40%" required>
+                                    </div>
+                                }
+                                else
+                                {
+                                    <div class="custom-file-input">
+                                        <label for="@item.Name" class="form-label">Select File</label>
+                                        <input name="@item.Name" type="file" class="custom-file-input" id="@item.Name" style="width:40%">
+                                    </div>
+                                }
                                 }
                                 else if (item.ControlId == (int)Shared.Enum.ControlType.Date)
                                 {
-                                    @if (item.IsRequired)
-                                    {
-                                        <div class="col-span-12 sm:col-span-6">
-                                            <label for="@item.Name" class="form-label">@item.Name</label>
-                                            <input name="@item.Name" type="date" id="datepicker" class="form-control" style="width:20%" required>
-                                        </div>
-                                    }
-                                    else
-                                    {
-                                        <div class="col-span-12 sm:col-span-6">
-                                            <label for="@item.Name" class="form-label">@item.Name</label>
-                                            <input name="@item.Name" type="date" id="datepicker" class="form-control" style="width:20%">
-                                        </div>
-                                    }
+                                @if (item.IsRequired)
+                                {
+                                    <div class="col-span-12 sm:col-span-6">
+                                        <label for="@item.Name" class="form-label">@item.Name</label>
+                                        <input name="@item.Name" type="date" id="datepicker" class="form-control" style="width:20%" required>
+                                    </div>
+                                }
+                                else
+                                {
+                                    <div class="col-span-12 sm:col-span-6">
+                                        <label for="@item.Name" class="form-label">@item.Name</label>
+                                        <input name="@item.Name" type="date" id="datepicker" class="form-control" style="width:20%">
+                                    </div>
+                                }
                                 }
                                 else if (item.ControlId == (int)Shared.Enum.ControlType.Time)
                                 {
-                                    @if (item.IsRequired)
-                                    {
-                                        <div class="col-span-12 sm:col-span-6">
-                                            <label for="@item.Name" class="form-label">@item.Name</label>
-                                            <input name="@item.Name" type="time" id="timepicker" class="form-control" style="width:20%" required>
-                                        </div>
-                                    }
-                                    else
-                                    {
-                                        <div class="col-span-12 sm:col-span-6">
-                                            <label for="@item.Name" class="form-label">@item.Name</label>
-                                            <input name="@item.Name" type="time" id="timepicker" class="form-control" style="width:20%">
-                                        </div>
-                                    }
+                                @if (item.IsRequired)
+                                {
+                                    <div class="col-span-12 sm:col-span-6">
+                                        <label for="@item.Name" class="form-label">@item.Name</label>
+                                        <input name="@item.Name" type="time" id="timepicker" class="form-control" style="width:20%" required>
+                                    </div>
+                                }
+                                else
+                                {
+                                    <div class="col-span-12 sm:col-span-6">
+                                        <label for="@item.Name" class="form-label">@item.Name</label>
+                                        <input name="@item.Name" type="time" id="timepicker" class="form-control" style="width:20%">
+                                    </div>
+                                }
                                 }
                                 else if (item.ControlId == (int)Shared.Enum.ControlType.DateTime)
                                 {
-                                    @if (item.IsRequired)
-                                    {
-                                        <div class="col-span-12 sm:col-span-6">
-                                            <label for="@item.Name" class="form-label">@item.Name</label>
-                                            <input name="@item.Name" type="datetime-local" id="datetimepicker" class="form-control" style="width:20%" required>
-                                        </div>
-                                    }
-                                    else
-                                    {
-                                        <div class="col-span-12 sm:col-span-6">
-                                            <label for="@item.Name" class="form-label">@item.Name</label>
-                                            <input name="@item.Name" type="datetime-local" id="datetimepicker" class="form-control" style="width:20%">
-                                        </div>
-                                    }
+                                @if (item.IsRequired)
+                                {
+                                    <div class="col-span-12 sm:col-span-6">
+                                        <label for="@item.Name" class="form-label">@item.Name</label>
+                                        <input name="@item.Name" type="datetime-local" id="datetimepicker" class="form-control" style="width:20%" required>
+                                    </div>
+                                }
+                                else
+                                {
+                                    <div class="col-span-12 sm:col-span-6">
+                                        <label for="@item.Name" class="form-label">@item.Name</label>
+                                        <input name="@item.Name" type="datetime-local" id="datetimepicker" class="form-control" style="width:20%">
+                                    </div>
+                                }
                                 }
                             </div>
                         </div>
@@ -223,7 +288,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.unobtrusive-ajax.min.js"></script>
     <script src="~/lib/sweetalert/js/sweetalert2.all.min.js"></script>
-    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>  
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
     <script type="text/javascript">
 
         $(document).ready(function () {
@@ -271,8 +336,7 @@
         function clearFormCreate() {
             var frm = document.getElementsByName('userform')[0];
             frm.reset();
-        }     
-       
+        }
+
     </script>
  }
-
