--- a/DynamicForm/Views/FieldOptions/_AddOptions.cshtml
+++ b/DynamicForm/Views/FieldOptions/_AddOptions.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="container">
+﻿@model DynamicForm.Models.TemplateFieldsModel
+
+<div class="container">
     <h2>Add options</h2>
     <div class="modal-dialog">
 
@@ -14,7 +16,22 @@
                 <div id="TextBoxContainer" class="form-group">
                     <!--Textboxes will be added here -->
                 </div>
+                <div class="form-group">
+                    <label class="required" for="FormOrdinal">Orientation</label>
+                    <div class="form-group">
+                        <label class="checkbox-inline">
+                            <label class="form-check-label" for="radio-switch-vertical">Vertical</label>
+                            <input id="radio-switch-vertical" class="form-check-input" type="radio" name="orientation" asp-for="Orientation" value="1" checked>
+                        </label>
+                        <label class="checkbox-inline">
+                            <label class="form-check-label" for="radio-switch-horizontal">Horizontal</label>
+                            <input id="radio-switch-horizontal" class="form-check-input" type="radio" name="orientation" asp-for="Orientation" value="0">
+                        </label>
+                    </div>
+                </div>
             </div>
+            
+
             <div class="modal-footer">
                 <button class="btn btn-success" type="button" onclick="addFieldOptions()"><span class="glyphicon glyphicon-floppy-saved"></span> Create</button>
                 <button type="button" class="btn btn-danger" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Close</button>
