--- a/DynamicForm/Views/Fields/Index.cshtml
+++ b/DynamicForm/Views/Fields/Index.cshtml
@@ -23,11 +23,7 @@
     .button-group .btn {
          flex: 0 0 auto;
          margin-right: 10px;
-     }
-
-    .Control-dropdown {
-        width: 180px;
-    }
+     }   
 
 </style>
 
@@ -78,7 +74,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="FieldDataType">Control Type</label>
-                                <select name="ControlId" class="Control-dropdown"  asp-for="ControlId" asp-items="@ViewBag.ControlTypes"></select>
+                                <select name="ControlId" class="form-control" style="width:40%" asp-for="ControlId" asp-items="@ViewBag.ControlTypes"></select>
                             </div>
                             <div class="form-group">
                                 <label class="required" for="DefaultValue">Default Value</label>
