--- a/DynamicForm/Views/Fields/_EditFields.cshtml
+++ b/DynamicForm/Views/Fields/_EditFields.cshtml
@@ -23,7 +23,7 @@
                 </div>
                 <div class="form-group">
                     <label for="FieldDataType">Control Type</label>
-                    <select name="ControlId" class="Control-dropdown" asp-for="ControlId" asp-items="@ViewBag.ControlTypes"></select>
+                    <select name="ControlId" class="form-control" style="width:40%" asp-for="ControlId" asp-items="@ViewBag.ControlTypes"></select>
                 </div>
                 <div class="form-group">
                     <label class="required" for="DefaultValue">Default Value</label>
